--- a/BankcardRec/app/src/main/AndroidManifest.xml
+++ b/BankcardRec/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".CardOCRActivity"></activity>
+        <provider
+            android:authorities="cn.hohn.bankcardrec.fileprovider"
+            android:name="android.support.v4.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
 
     </application>
 
